--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
 theme: jekyll-theme-minimal
+markdown: redcarpet
+redcarpet:
+  extensions:
+    [
+      'no_intra_emphasis',
+      'fenced_code_blocks',
+      'autolink',
+      'tables',
+      'strikethrough',
+      'superscript',
+      'with_toc_data',
+    ]
