--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,11 @@ redcarpet:
       'superscript',
       'with_toc_data',
     ]
+include:
+  - _pages
+defaults:
+  - scope:
+      path: '_pages'
+      type: 'pages'
+    values:
+      permalink: /:basename/
